# circuit-simulator

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  README.md
inc/circsim/common/: FormatError.hpp  IndexError.hpp  LimitError.hpp  StateError.hpp  ValueError.hpp
inc/circsim/components/: Transistor.hpp  Wire.hpp
inc/circsim/data/: DatabaseObject.hpp  ExternalDatabase.hpp  InternalDatabase.hpp
inc/circsim/data/objects/: TransistorDatabaseObject.hpp  WireDatabaseObject.hpp
inc/circsim/sim/: Simulator.hpp  WireGroup.hpp
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/include/circsim/common/: EndianOperations.hpp  FormatError.hpp  ValidationError.hpp
lib/common/src/: EndianOperations.cpp
lib/components/: CMakeLists.txt
lib/components/include/circsim/components/: Circuit.hpp  CircuitState.hpp  Clock.hpp  Register.hpp  Transistor.hpp  Wire.hpp
lib/components/src/: Circuit.cpp  CircuitState.cpp  Clock.cpp  Register.cpp  Transistor.cpp  Wire.cpp
lib/components/test/: Circuit.cpp  Register.cpp  Transistor.cpp  Wire.cpp
lib/data/: CMakeLists.txt  DatabaseObject.cpp
lib/data/include/circsim/data/: ExternalDatabase.hpp  ExternalStorage.hpp  InternalStorage.hpp  JsonConstants.hpp  JsonParser.hpp
lib/data/objects/: WireDatabaseObject.cpp
lib/data/src/: DatabaseObject.cpp  ExternalDatabase.cpp  ExternalStorage.cpp  InternalStorage.cpp  JsonParser.cpp
lib/data/src/ExternalStorage/: CircuitState.cpp  Register.cpp  Transistor.cpp  Wire.cpp
lib/data/src/objects/: TransistorDatabaseObject.cpp
lib/data/test/: ExternalStorage.cpp  InternalStorage.cpp  JsonParser.cpp
lib/data/test/ExternalStorage/: CircuitState.cpp  Register.cpp  Transistor.cpp  Wire.cpp
lib/data/test/objects/: WireDatabaseObject.cpp
lib/sim/: CMakeLists.txt
lib/sim/include/circsim/sim/: Simulator.hpp  WireGroup.hpp
lib/sim/src/: Simulator.cpp  WireGroup.cpp
lib/sim/test/: Simulator.cpp  WireGroup.cpp
lib/test/: CMakeLists.txt
lib/test/include/: Gates.hpp
lib/test/src/: Gates.cpp
src/: CMakeLists.txt  main.cpp
src/components/: Transistor.cpp  Wire.cpp
src/data/: DatabaseObject.cpp  ExternalDatabase.cpp  InternalDatabase.cpp
src/data/objects/: TransistorDatabaseObject.cpp  WireDatabaseObject.cpp
src/sim/: Simulator.cpp  WireGroup.cpp
test/: CMakeLists.txt
test/6502/: 6502.json  main.cpp
test/common/: Nand.hpp  Nor.hpp
test/components/: Transistor.cpp
test/cpu-import/: 6800.json  cpu-import.cpp
test/data/: DatabaseObject.cpp  InternalDatabase.cpp
test/data/objects/: TransistorDatabaseObject.cpp  WireDatabaseObject.cpp
test/flip-flop/: flip-flop.cpp  flip-flop.json
test/full-adder/: full-adder.cpp  full-adder.json
test/sim/: Simulator.cpp  WireGroup.cpp
test/test_common/: Gates.cpp  Gates.hpp
